// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusContent > status is Approved 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-1q36rmd-MuiStack-root"
  >
    <svg
      fill="none"
      height="14"
      viewBox="0 0 18 14"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.00016 11.17L1.83016 7L0.410156 8.41L6.00016 14L18.0002 2L16.5902 0.59L6.00016 11.17Z"
        fill="#2CCCA6"
      />
    </svg>
    <div
      class="MuiBox-root css-0"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
      >
        Принято
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusContent > status is InReview 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-1q36rmd-MuiStack-root"
  >
    <svg
      fill="none"
      height="18"
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M11.76 10.27L17.49 16L16 17.49L10.27 11.76C9.2 12.53 7.91 13 6.5 13C2.91 13 0 10.09 0 6.5C0 2.91 2.91 0 6.5 0C10.09 0 13 2.91 13 6.5C13 7.91 12.53 9.2 11.76 10.27ZM6.5 2C4.01 2 2 4.01 2 6.5C2 8.99 4.01 11 6.5 11C8.99 11 11 8.99 11 6.5C11 4.01 8.99 2 6.5 2Z"
        fill="#6750A4"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="MuiBox-root css-0"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
      >
        На проверке
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusContent > status is New 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-1q36rmd-MuiStack-root"
  >
    <svg
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.99 0C4.47 0 0 4.48 0 10C0 15.52 4.47 20 9.99 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 9.99 0ZM10 18C5.58 18 2 14.42 2 10C2 5.58 5.58 2 10 2C14.42 2 18 5.58 18 10C18 14.42 14.42 18 10 18Z"
        fill="black"
        fill-opacity="0.56"
      />
      <path
        d="M10.5 5H9V11L14.25 14.15L15 12.92L10.5 10.25V5Z"
        fill="black"
        fill-opacity="0.56"
      />
    </svg>
    <div
      class="MuiBox-root css-0"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
      >
        Ожидает проверки
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatusContent > status is NotApproved 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-1q36rmd-MuiStack-root"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-cclel-MuiSvgIcon-root"
      data-testid="HighlightOffIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M14.59 8 12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
    <div
      class="MuiBox-root css-0"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-e784if-MuiTypography-root"
      >
        Не принято
      </p>
    </div>
  </div>
</DocumentFragment>
`;
